# JS_CPP_Scripting

./: .gitignore  CMakeLists.txt  open-vs-code-with-vars.bat
libs/duktape/debugger/: package-lock.json
libs/duktape/examples/debug-trans-socket/: duk_trans_socket_windows.c
libs/duktape/prep/: duk_config.h  duk_source_meta.json
libs/easylogging++/: easylogging++.cc
src/: __tests.cpp  application.cpp  classes.cpp  configuration.cpp  configuration.h  globals.cpp  globals.h  main.cpp  stdafx.h  utility.cpp
src/application/: application.cpp  application.h
src/headers/: classes.h  configuration.h  configuration_def.h
src/scripting/: duk_debugger.cpp  duk_debugger.h  duk_extensions.h  duk_module_loader.cpp  duk_trans_socket.h
src/scripting/binding/: classes.cpp
src/scripting/extensions/: duk_debugger.cpp  duk_module_loader.cpp  duk_trans_socket_windows.cpp
src/utility/: files.cpp  files.h  files.hpp  utility.cpp  utility.h
